# grammaticon-data

./: .gitignore  README.md  grammaticon.py  grammaticon_makecsv.py  setup.cfg
.github/workflows/: csvw-validation.yml
csvw/: collections.csv  concept-hierarchy.csv  concepts-features.csv  concepts-metafeatures.csv  concepts.csv  csvw-metadata.json  feature-lists.csv  features.csv  metafeatures.csv  sources.bib
raw/: Concepthierarchy.xlsx  Concepts.csv  Concepts.xlsx  Concepts_features.xlsx  Concepts_metafeatures.csv  Concepts_metafeatures.xlsx  Feature_lists.xlsx  Features.xlsx  Metafeatures.xlsx  Sources.bib  dois.csv  sources.bib  xlsx2csv.py
raw/csv-export/: Concepthierarchy.csv  Concepts.csv  Concepts_features.csv  Concepts_metafeatures.csv  Feature_lists.csv  Features.csv  Metafeatures.csv
