[metadata]
name = grammaticon-data
version = 0.0.1.dev0

[options]
zip_safe = False
include_package_data = True
install_requires =
    csvw
py_modules =
    grammaticon_makecsvw

# [options.extras_require]
# test =
#     pytest-cldf
#
# [tool:pytest]
# testpaths = test.py
# addopts =
#   --cldf-metadata=cldf/cldf-metadata.json
